# updatenotifier

./: CMakeLists.txt  PKGBUILD  README.md  install.sh
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: BackendConfig.qml  CompactRepresentation.qml  FullRepresentation.qml  GeneralConfig.qml  UIConfig.qml  main.qml
plugin/: CMakeLists.txt  qmldir  updatenotifierplugin.cpp  updatenotifierplugin.h
